--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@motionone/utils": "^10.18.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
@@ -23,7 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
-    "framer-motion": "^11.3.7",
+    "framer-motion": "^11.18.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.395.0",
     "next-themes": "^0.3.0",
@@ -31,7 +32,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.3",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
