--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^18.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
