--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tabler/icons-react": "^3.31.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,9 +28,11 @@
     "framer-motion": "^11.18.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.395.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image": "^4.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.3",
