--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@motionone/utils": "^10.18.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -27,6 +28,7 @@
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.18.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
     "mini-svg-data-uri": "^1.4.4",
     "next-themes": "^0.3.0",
